--- a/workflow/locales/en.json
+++ b/workflow/locales/en.json
@@ -15,6 +15,8 @@
   "browser": {
     "start_page": "Start Page",
     "create_new_workflow": "Create New Workflow",
+    "create_new_app": "Create New App",
+    "app_tab_title": "Untitled App",
     "open_recent": "Open recent workflow",
     "search_placeholder": "Search workflow...",
     "no_workflows_found": "You haven't saved any workflows yet (or no results found).",
@@ -258,8 +260,13 @@
       "variables": "Variables",
       "logs": "Logs",
       "history": "History",
+      "apps": "Ứng dụng",
       "form": "Form",
       "workflows": "Workflows"
+    },
+    "apps_tab": {
+      "title": "Ứng dụng",
+      "description": "Quản lý các ứng dụng của bạn."
     },
     "logs_tab": {
         "title": "Execution Logs",
