--- a/workflow/locales/en.json
+++ b/workflow/locales/en.json
@@ -16,7 +16,7 @@
     "start_page": "Start Page",
     "create_new_workflow": "Create New Workflow",
     "create_new_app": "Create New App",
-    "app_tab_title": "Untitled App",
+    "sheet_tab_title": "Untitled App",
     "open_recent": "Open recent workflow",
     "search_placeholder": "Search workflow...",
     "no_workflows_found": "You haven't saved any workflows yet (or no results found).",
